# speech-emotion-recognition

./: CMakeLists.txt  Readme.md  package.xml  setup.py
speechemotionrecognition/: __init__.py  dnn.py  mlmodel.py  utilities.py
